Fix position of full name on tablet view

--- a/styles.css
+++ b/styles.css
@@ -285,7 +285,7 @@ footer p {
   }
 
   .full-name {
-    top: 0.5rem;
+    top: -8rem;
     margin-left: 30vw;
     width: auto;
     font-size: 3.5rem;
